force-app/main/default/objects/SMS_Schedule__c/SMS_Schedule__c.object-meta.xml
<CustomObject>
    <label>SMS Schedule</label>
    <nameField>
        <label>SMS Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>