force-app/main/default/objects/SMS_Schedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Schedules</relationshipLabel>
    <relationshipName>SMS_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>