force-app/main/default/objects/SMS_Schedule__c/fields/Business_Hours_Override__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this message can be sent outside of business hours (8am Eastern Time - 9pm Eastern Time</description>
    <label>Business Hours Override</label>
    <type>Checkbox</type>
</CustomField>