force-app/main/default/objects/SMS_Schedule__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Schedules</relationshipLabel>
    <relationshipName>SMS_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>