force-app/main/default/objects/SMS_Schedule__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>EventId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>