force-app/main/default/objects/SMS_Schedule__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SMS Schedules</relationshipLabel>
    <relationshipName>SMS_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>