force-app/main/default/objects/SMS_Schedule__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>480</length>
    <type>LongTextArea</type>
</CustomField>