force-app/main/default/objects/SMS_Schedule__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <formula>IF(CONTAINS( Name ,&quot;No Show&quot;),&quot;No Show&quot;,
IF(CONTAINS( Name ,&quot;No Answer&quot;),&quot;No Answer&quot;,
IF(CONTAINS( Name ,&quot;TSA Invitation&quot;),&quot;TSA Invite&quot;,&quot;Reminder&quot;)))</formula>
    <label>Message Type</label>
    <type>Text</type>
</CustomField>