force-app/main/default/objects/SMS_Schedule__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>