force-app/main/default/objects/SMS_Schedule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The priority of the SMS send. 1 is low, 2 is medium, 3 is high</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>