force-app/main/default/objects/SMS_Schedule__c/fields/RingCentral_Number__c.field-meta.xml
<CustomField>
    <fullName>RingCentral_Number__c</fullName>
    <defaultValue>&quot;+18662126814&quot;</defaultValue>
    <label>RingCentral Number</label>
    <type>Phone</type>
</CustomField>