force-app/main/default/objects/SMS_Schedule__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>The actual date and time the message was sent</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>