force-app/main/default/objects/SMS_Schedule__c/fields/To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Phone_Number__c</fullName>
    <label>To Phone Number</label>
    <type>Phone</type>
</CustomField>