force-app/main/default/objects/SMS_Schedule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisory Reminder</fullName>
            </value>
            <value>
                <fullName>BNA Invite</fullName>
            </value>
            <value>
                <fullName>BNA No Show</fullName>
            </value>
            <value>
                <fullName>BNA Reminder</fullName>
            </value>
            <value>
                <fullName>CB Invite</fullName>
            </value>
            <value>
                <fullName>CB No Show</fullName>
            </value>
            <value>
                <fullName>CB Reminder</fullName>
            </value>
            <value>
                <fullName>EF Invite</fullName>
            </value>
            <value>
                <fullName>EF No Show</fullName>
            </value>
            <value>
                <fullName>EF Reminder</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SDR No Answer</fullName>
            </value>
            <value>
                <fullName>TSA Invite</fullName>
            </value>
            <value>
                <fullName>TSA No Show</fullName>
            </value>
            <value>
                <fullName>TSA Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>